--- a/portfolio-website.html
+++ b/portfolio-website.html
@@ -919,7 +919,7 @@
               </div>
               <div class="project-links">
                 <a href="#"><i class="fas fa-link"></i> Live Demo</a>
-                <a href="#"><i class="fab fa-github"></i> Source Code</a>
+                <a href="https://github.com/pulakesh2/weather-app.github.io"><i class="fab fa-github"></i> Source Code</a>
               </div>
             </div>
           </div>
