--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
                 <span class="project-tag">Redux</span>
               </div>
               <div class="project-links">
-                <a href="#"><i class="fas fa-link"></i> Live Demo</a>
+                <a href="https://pulakesh-weather.netlify.app/"><i class="fas fa-link"></i> Live Demo</a>
                 <a href="https://github.com/pulakesh2/weather-app.github.io"><i class="fab fa-github"></i> Source Code</a>
               </div>
             </div>
