--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
           <!-- Project 6 -->
           <div class="project-card scale-in">
             <img
-              src="/api/placeholder/400/250"
+              src="weather.png"
               alt="Project 6"
               class="project-image"
             />
