--- a/index.html
+++ b/index.html
@@ -884,18 +884,18 @@
               class="project-image"
             />
             <div class="project-content">
-              <h3 class="project-title">Make My Travel Easy</h3>
+              <h3 class="project-title">Library Management System</h3>
               <p class="project-description">
-                Not Yet Published. Working On it
+               A React-based library system where users can view books, request them, see admin messages after approval, and update their profiles. Admins can add, edit, or delete books, approve user requests, and monitor activity through a dashboard. It streamlines library management with clear communication between users and admins.
               </p>
               <div class="project-tags">
                 <span class="project-tag">React JS</span>
-                <span class="project-tag">Redux</span>
-                <span class="project-tag">Google Map Api</span>
+                <span class="project-tag">React Query</span>
+                <span class="project-tag">Supabase database</span>
               </div>
               <div class="project-links">
-                <a href="#"><i class="fas fa-link"></i> Live Demo</a>
-                <a href="#"><i class="fab fa-github"></i> Source Code</a>
+                <a href="https://library-management-system-pulakesh.netlify.app"><i class="fas fa-link"></i> Live Demo</a>
+                <a href="https://github.com/pulakesh2/library-management-system"><i class="fab fa-github"></i> Source Code</a>
               </div>
             </div>
           </div>
