--- a/index.html
+++ b/index.html
@@ -879,9 +879,9 @@
           <!-- Project 5 -->
           <div class="project-card scale-in">
             <img
-              src="/api/placeholder/400/250"
+              src="Screenshot (9).png"
               alt="Project 5"
-              class="project-image"
+              class="library management system"
             />
             <div class="project-content">
               <h3 class="project-title">Library Management System</h3>
