--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
             <img
               src="Screenshot (9).png"
               alt="Project 5"
-              class="library management system"
+              class="project-image"
             />
             <div class="project-content">
               <h3 class="project-title">Library Management System</h3>
